--- a/The_Grand_Recovery.ipynb
+++ b/The_Grand_Recovery.ipynb
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -599,49 +599,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Aa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>A9a</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   state text  lat  lon followers favorites friends statuses_count compound  \\\n",
-       "2     Aa  NaN  NaN  NaN       NaN       NaN     NaN            NaN      NaN   \n",
-       "50   A9a  NaN  NaN  NaN       NaN       NaN     NaN            NaN      NaN   \n",
-       "\n",
-       "    pos  neg  \n",
-       "2   NaN  NaN  \n",
-       "50  NaN  NaN  "
+       "Empty DataFrame\n",
+       "Columns: [state, text, lat, lon, followers, favorites, friends, statuses_count, compound, pos, neg]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,9 +629,8 @@
     "tweet_df[\"pos\"] = \"\"\n",
     "tweet_df[\"neg\"] = \"\"\n",
     "\n",
-    "tweet_df.head()\n",
-    "tweet_df.set_value(2, \"state\", \"Aa\")\n",
-    "tweet_df.set_value(index, \"state\", \"A9a\")\n"
+    "\n",
+    "tweet_df.head()\n"
    ]
   },
   {
